--- a/package.json
+++ b/package.json
@@ -8,13 +8,20 @@
   "license": "MIT",
   "scripts": {
     "start": "node index.mjs",
-    "lint": "eslint . --ext .mjs",
-    "lint:fix": "eslint . --ext .mjs --fix"
+    "build": "vite build",
+    "lint": "eslint . --ext .mjs,.vue",
+    "lint:fix": "eslint . --ext .mjs,.vue --fix"
   },
   "dependencies": {
     "@koa/router": "12.0.0",
+    "@vitejs/plugin-vue": "4.2.3",
     "http-errors": "2.0.0",
-    "koa": "2.14.2"
+    "koa": "2.14.2",
+    "koa-static": "5.0.0",
+    "swagger-ui": "5.1.0",
+    "swagger-ui-dist": "5.1.0",
+    "vite": "4.3.9",
+    "vue": "3.3.4"
   },
   "devDependencies": {
     "@edwmurph/eslint-config": "5.0.3"
