--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
   "scripts": {
     "start": "node index.mjs",
     "build": "vite build",
-    "lint": "eslint . --ext .mjs,.vue",
-    "lint:fix": "eslint . --ext .mjs,.vue --fix"
+    "lint": "eslint . --ext .mjs,.jsx",
+    "lint:fix": "eslint . --ext .mjs,.jsx --fix"
   },
   "dependencies": {
     "@koa/router": "12.0.0",
-    "@vitejs/plugin-vue": "4.2.3",
     "http-errors": "2.0.0",
     "koa": "2.14.2",
     "koa-static": "5.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "swagger-ui": "5.1.0",
-    "swagger-ui-dist": "5.1.0",
-    "vite": "4.3.9",
-    "vue": "3.3.4"
+    "swagger-ui-dist": "5.1.0"
   },
   "devDependencies": {
-    "@edwmurph/eslint-config": "5.0.3"
+    "@edwmurph/eslint-config": "5.0.3",
+    "@vitejs/plugin-react": "4.0.1",
+    "vite": "4.3.9"
   },
   "repository": {
     "type": "git",
