--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@koa/router": "12.0.0",
     "bootstrap": "5.3.0",
+    "bootstrap-icons": "1.10.5",
     "http-errors": "2.0.0",
     "koa": "2.14.2",
     "koa-static": "5.0.0",
