--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "koa-static": "5.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.14.1"
+    "react-router-dom": "6.14.1",
+    "swagger-ui-react": "5.1.0"
   },
   "devDependencies": {
     "@edwmurph/eslint-config": "5.0.3",
