--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "lint:fix": "eslint . --ext .mjs,.jsx --fix"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "3.363.0",
     "@koa/router": "12.0.0",
     "bootstrap": "5.3.0",
     "bootstrap-icons": "1.10.5",
+    "dotenv": "16.3.1",
     "http-errors": "2.0.0",
     "koa": "2.14.2",
     "koa-send": "5.0.1",
