--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
   "dependencies": {
     "@aws-sdk/client-s3": "3.363.0",
     "@koa/router": "12.0.0",
-    "bootstrap": "5.3.0",
-    "bootstrap-icons": "1.10.5",
     "dotenv": "16.3.1",
     "http-errors": "2.0.0",
     "koa": "2.14.2",
     "koa-send": "5.0.1",
     "koa-static": "5.0.0",
+    "primeflex": "3.3.1",
+    "primeicons": "6.0.1",
+    "primereact": "9.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.14.1",
