--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint:fix": "eslint . --ext .mjs,.jsx --fix"
   },
   "dependencies": {
+    "@asyncapi/react-component": "1.0.0-next.48",
     "@aws-sdk/client-s3": "3.363.0",
     "@koa/router": "12.0.0",
     "dotenv": "16.3.1",
