--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "primereact": "9.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "8.0.7",
     "react-router-dom": "6.14.1",
     "swagger-ui-react": "5.1.0"
   },
