--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@asyncapi/react-component": "1.0.0-next.48",
     "@aws-sdk/client-s3": "3.363.0",
     "@koa/router": "12.0.0",
+    "axios": "1.4.0",
     "dotenv": "16.3.1",
     "http-errors": "2.0.0",
     "koa": "2.14.2",
