--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "1.4.0",
     "dotenv": "16.3.1",
     "http-errors": "2.0.0",
+    "js-yaml": "4.1.0",
     "koa": "2.14.2",
     "koa-send": "5.0.1",
     "koa-static": "5.0.0",
