--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-dom": "18.2.0",
     "react-markdown": "8.0.7",
     "react-router-dom": "6.14.1",
+    "react-syntax-highlighter": "15.5.0",
+    "remark-gfm": "3.0.1",
     "swagger-ui-react": "5.1.0"
   },
   "devDependencies": {
