--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "koa": "2.14.2",
     "koa-send": "5.0.1",
     "koa-static": "5.0.0",
+    "lodash.merge": "4.6.2",
     "primeflex": "3.3.1",
     "primeicons": "6.0.1",
     "primereact": "9.6.0",
