--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@koa/router": "12.0.0",
     "axios": "1.4.0",
     "dotenv": "16.3.1",
+    "github-markdown-css": "5.2.0",
     "http-errors": "2.0.0",
     "js-yaml": "4.1.0",
     "koa": "2.14.2",
@@ -32,6 +33,7 @@
     "react-markdown": "8.0.7",
     "react-router-dom": "6.14.1",
     "react-syntax-highlighter": "15.5.0",
+    "rehype-raw": "6.1.1",
     "remark-gfm": "3.0.1",
     "swagger-ui-react": "5.1.0"
   },
